# litomi

./: .browserslistrc  .cursorrules  .dockerignore  .env.production.example  .env.template  .gcloudignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Dockerfile  Dockerfile.hono  Dockerfile.nextjs  Dockerfile.nextjs.gcp  README.en.md  README.md  SECURITY.en.md  SECURITY.md  bunfig.toml  cache-handler.js  cache-handler.mjs  capacitor.config.ts  cloudbuild.prod.hono.yaml  cloudbuild.prod.nextjs.yaml  cloudbuild.stage.hono.yaml  cloudbuild.stage.nextjs.yaml  cloudbuild.stage.yaml  cloudflare-env.d.ts  docker-compose.performance.yml  drizzle.aiven.config.ts  drizzle.neon.config.ts  drizzle.supabase.config.ts  eslint.config.mjs  lint-staged.config.mjs  next.config.ts  package.json  sentry.edge.config.ts  sentry.server.config.ts  sonar-project.properties  tsconfig.json  (+2 more)
.github/: FUNDING.yml
android/: keystore.properties.template
docs/: ai-chat-on-device.md  mobile-distribution.md
huggingface/: requirements-export-onnx.txt
k8s/: README.md  RUNBOOK.post-reboot.md  RUNBOOK.vault-eso.md  platform-ops.sh
local-search/: README.md
mobile/: README.md  altstore.config.json  capacitor.config.json  capacitor.config.ts  index.html  ios.config.json  (+2 more)
trash/local-search/: Cargo.toml  README.md
trash/local-search/data/index/: doc_meta.sqlite
trash/local-search/huggingface/: LOCAL_SEMANTIC_SEARCH_SPEC.md  export_bge_m3_dense_onnx.py
trash/local-search/scripts/: run-macos.sh
trash/local-search/src/: index_builder.rs  main.rs  vector_store.rs
(+1311 files in other folders)
