[package]
name = "litomi-local-search"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
bytemuck = "1"
clap = { version = "4", features = ["derive", "env"] }
memmap2 = "0.9"
ordered-float = "4"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
